--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,8 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #D3AF02;
+/*   color: #D3AF02; */
+	color: blue;
 }
 hr {
   border-top: 1px solid #e5e5e5;
