--- a/css/styles.css
+++ b/css/styles.css
@@ -28,8 +28,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-/*   color: #D3AF02; */
-	color: blue;
+  color: #D3AF02;
 }
 hr {
   border-top: 1px solid #e5e5e5;
